Fix a bug where the widgets on the pages could overflow

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -13,6 +13,6 @@
 
 
  .c-we-chart, .c-we-chart .chart, .c-we-chart .chart canvas {
-  min-height: 250px;
-  min-width: 100%;
+  height: 250px;
+  width: 100%;
 }
